--- a/teamsUpdate.html
+++ b/teamsUpdate.html
@@ -26,7 +26,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="home-button">
-                <button class="btn btn-secondary" onclick="window.location.href='teams.html'">Home</button>
+                <button class="btn btn-secondary" onclick="window.location.href='index.html'">Home</button>
             </div>
         </div>
     </div>
